deploy/kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: go-httpbin
  namespace: go-httpbin
  labels:
    app.kubernetes.io/name: go-httpbin
    app.kubernetes.io/part-of: go-httpbin
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
    - name: http
      hostname: go-httpbin.local
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-httpbin
  namespace: go-httpbin
  labels:
    app.kubernetes.io/name: go-httpbin
    app.kubernetes.io/part-of: go-httpbin
spec:
  parentRefs:
    - name: go-httpbin
  hostnames:
    - go-httpbin.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: go-httpbin
          port: 80
